--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <div class="dropdown">
-    <a href="portfolio.html"><button class="dropbtn">Portfolio </a>
+    <button class="dropbtn">Portfolio 
       <i class="fa fa-caret-down"></i>
     </button>
 
@@ -43,6 +43,16 @@
  </div>
  <button class="button" id="button">Submit</button>
 </div>
+
+<h4><span style="font weight:bold">Extra Contact Info</span></h4>
+    <hr style="width:200px" class="w3-opacity">
+
+    <div>
+      <p>San Jose, CA</p>
+      <p>Email: talea828@gmail.com</p>
+      <p>(818)-497-6381</p>
+    </div><br>
+  </div>
 
 </body>
 </html>
