--- a/photo.html
+++ b/photo.html
@@ -12,7 +12,7 @@
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <div class="dropdown">
-    <a href="portfolio.html"><button class="dropbtn">Portfolio </a>
+    <button class="dropbtn">Portfolio 
       <i class="fa fa-caret-down"></i>
     </button>
 
@@ -30,21 +30,15 @@
   
 
   <div class="cards">
-  	<a href="css/images/car.jpg"><img src="css/images/car.jpg" alt="car"></a>
-    <a href="css/images/gear.jpg"><img src="css/images/gear.jpg" alt="gear"></a>
-  	<a href="css/images/rectangle.jpg"><img src="css/images/rectangle.jpg" alt="rectangles"></a>
-
-  	<a href="css/images/DSC_0480.jpg"><img src="css/images/DSC_0480.jpg"></a>
-
-  	<a href="css/images/DSC_0564.jpg"><img src="css/images/DSC_0564.jpg"></a>
-
-  	<a href="css/images/DSC_0750.jpg"><img src="css/images/DSC_0750.jpg"></a>
-
-  	<a href="css/images/DSC_1291.jpg"><img src="css/images/DSC_1291.jpg"></a>
-
-    <a href="css/images/DSC_1315.jpg "><img src="css/images/DSC_1315.jpg"></a>
-
-    <a href="css/images/DSC_1238.jpg"><img src="css/images/DSC_1238.jpg"></a>
+  	<img src="css/images/car.jpg" alt="car" class="card">
+    <img src="css/images/gear.jpg" alt="gear" class="card">
+  	<img src="css/images/rectangle.jpg" alt="rectangles"class="card">
+  	<img src="css/images/DSC_0480.jpg" alt="flipped" class="card">
+  	<img src="css/images/DSC_0564.jpg" alt="log" class="card">
+    <img src="css/images/DSC_0750.jpg" alt="phone" class="card">
+  	<img src="css/images/DSC_1291.jpg" alt="fern" class="card">
+    <img src="css/images/DSC_1315.jpg" alt="deer" class="card">
+    <img src="css/images/DSC_1238.jpg" alt="hills" class="card">
 
   	
   </div>
