--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,8 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
 	<link rel="stylesheet" type="text/css" href="css/custom.css" />
-  <link rel="stylesheet" type="text/css" href="custom.js">
+  <link rel="stylesheet" type="text/css" href="css/carousel.css">
+
 </head>
 <body>
 
@@ -29,16 +30,43 @@
    <div class="main">
    <h1>Portfolio</h1>
    </div>
-   
-   <div class="main">
-     <span class="carousel">1</span>
-     <span class="carousel">2</span>
-     <span class="carousel">3</span>
-   </div>
 
-    <script type="custom.js"></script>
-    <script>
-      var numbers = new Carousel();
-    </script>
+
+<div class="carousel">
+    <div class="carousel-inner">
+        <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
+        <div class="carousel-item">
+            <img src="css/images/jellypic.jpg">
+        </div>
+        <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
+        <div class="carousel-item">
+            <img src="css/images/rectangle.jpg">
+        </div>
+        <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
+        <div class="carousel-item">
+            <img src="css/images/shadow_2.png">
+        </div>
+        <label for="carousel-3" class="carousel-control prev control-1">‹</label>
+        <label for="carousel-2" class="carousel-control next control-1">›</label>
+        <label for="carousel-1" class="carousel-control prev control-2">‹</label>
+        <label for="carousel-3" class="carousel-control next control-2">›</label>
+        <label for="carousel-2" class="carousel-control prev control-3">‹</label>
+        <label for="carousel-1" class="carousel-control next control-3">›</label>
+        <ol class="carousel-indicators">
+            <li>
+                <label for="carousel-1" class="carousel-bullet">•</label>
+            </li>
+            <li>
+                <label for="carousel-2" class="carousel-bullet">•</label>
+            </li>
+            <li>
+                <label for="carousel-3" class="carousel-bullet">•</label>
+            </li>
+        </ol>
+    </div>
+</div>
+
+</div>
+</ul>
 </body>
 </html>
