--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 	<link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
 	<link rel="stylesheet" type="text/css" href="css/custom.css" />
+  <link rel="stylesheet" type="text/css" href="css/carousel.css">
+
 </head>
 <body>
 	<!-- Nav bar -->
@@ -12,7 +14,7 @@
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <div class="dropdown">
-    <a href="portfolio.html"><button class="dropbtn">Portfolio </a>
+    <button class="dropbtn">Portfolio 
       <i class="fa fa-caret-down"></i>
     </button>
 
@@ -28,7 +30,40 @@
   <div class="main">
   <h1>Talea Rendon</h1>
   </div>
-
+  
+<div class="carousel">
+    <div class="carousel-inner">
+        <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
+        <div class="carousel-item">
+            <img src="css/images/jellypic.jpg">
+        </div>
+        <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
+        <div class="carousel-item">
+            <img src="css/images/rectangle.jpg">
+        </div>
+        <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
+        <div class="carousel-item">
+            <img src="css/images/shadow_2.png">
+        </div>
+        <label for="carousel-3" class="carousel-control prev control-1">‹</label>
+        <label for="carousel-2" class="carousel-control next control-1">›</label>
+        <label for="carousel-1" class="carousel-control prev control-2">‹</label>
+        <label for="carousel-3" class="carousel-control next control-2">›</label>
+        <label for="carousel-2" class="carousel-control prev control-3">‹</label>
+        <label for="carousel-1" class="carousel-control next control-3">›</label>
+        <ol class="carousel-indicators">
+            <li>
+                <label for="carousel-1" class="carousel-bullet">•</label>
+            </li>
+            <li>
+                <label for="carousel-2" class="carousel-bullet">•</label>
+            </li>
+            <li>
+                <label for="carousel-3" class="carousel-bullet">•</label>
+            </li>
+        </ol>
+    </div>
+</div>
 
 </body>
 </html>
