--- a/video.html
+++ b/video.html
@@ -28,12 +28,35 @@
   <div class="main">
   <h1>Video</h1>
   </div>
-  
-  <div class="boxes">
-  	<div class="box"> <iframe src="../RendonTalea_6_VideoAsInstallation.mp4"></iframe> </div>
-  	<div class="box">Two</div>
-  	<div class="box">Three</div>
-  </div>
-  
+
+<div class="grid">
+  <div class="video">
+          <iframe src="css/images/MVI_7632.mp4"></iframe>
+          <h2>Peephole</h2>
+          <p class="description">
+            Surveillance is everywhere in our lives. Data is constantly being collected off of us without a second thought. In my video I force the audience to switch from being the ones watched to those who are watching. This video follows someone through part of their day, jumping from one surveillance camera to the next, with the footage gradually getting more invasive. For my video installation piece, I would project the video in a closed off, dark room. However, the audience would not have access to this room. The only way to view my work would be to look through a small peep hole in the neighboring room’s wall. This would force viewers to “spy” on those in the video, creating a level of discomfort.</p>
+        </div>
+        <div class="video">
+          <iframe src="css/images/RendonTalea_3_VideoArtProject.mp4"></iframe>
+          <h2>S2 Ep36</h2>
+          <p class="description">
+            Youtube makeup tutorial parody.</p>
+        </div>
+        <div class="video">
+          <iframe src="css/images/shadow1.mp4"></iframe>
+          <h2>Shadow1</h2>
+          <p class="description">
+            A short clip that I animated for a projection mapping project. This was part of a bigger piece that was exhibited by SJSU's Cadre Halloween Showcase.</p>
+          
+        </div>
+        <div class="video">
+          <iframe src="css/images/shadow2.mp4"></iframe>
+          <h2>Shadow2</h2>
+          <p class="description">
+            A short clip that I animated for a projection mapping project. This was part of a bigger piece that was exhibited by SJSU's Cadre Halloween Showcase.</p>
+          
+        </div>
+
+       </div>
 </body>
 </html>
