--- a/misc.html
+++ b/misc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>contact</title>
+	<title>misc</title>
 	<link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
 	<link rel="stylesheet" type="text/css" href="css/custom.css" />
 </head>
@@ -25,34 +25,22 @@
   </div> 
    <a href="contact.html">Contact</a>
 </div>
+   
+  <div class="main">
+  <h1>Miscellaneous</h1>
+  
 
-<div class="main">
-<h1>Contact</h1>
+  <div class="cards">
+  	<img src="css/images/shadow_1.png" alt="strong" class="card">
+    <img src="css/images/shadow_2.png" alt="spooky" class="card">
+  	<img src="css/images/shadows_3.png" alt="sneaky"class="card">
+    <img src="css/images/jack.gif" alt="glitch" class="card">
+    <img src="css/images/jellypic.jpg" alt="glitch" class="card">
 
-    <!-- Contact Form -->
-<div class="contact">
-<form action="">
- 	<label>Name</label>
- 	<input type="text" id="name" name="name" placeholder="Type Here...">
 
- 	<label>Email</label>
- 	<input type="text" id="email" name="email" placeholder="Email">
+  	
+  </div>
 
- 	<label>Message</label>
- 	<textarea placeholder="Type Here..."></textarea>
- </form>
- </div>
- <button class="button" id="button">Submit</button>
-</div>
-
-<h4><span style="font weight:bold">Extra Contact Info</span></h4>
-    <hr style="width:200px" class="w3-opacity">
-
-    <div>
-      <p>San Jose, CA</p>
-      <p>Email: talea828@gmail.com</p>
-      <p>(818)-497-6381</p>
-    </div><br>
   </div>
 
 </body>
