--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
       <a href="photo.html">Photography</a>
       <a href="process.html">Processing</a>
       <a href="video.html">Videos</a>
+      <a href="misc.html">Miscellaneous</a>
     </div>
   </div> 
    <a href="contact.html">Contact</a>
