--- a/video.html
+++ b/video.html
@@ -20,6 +20,7 @@
       <a href="photo.html">Photography</a>
       <a href="process.html">Processing</a>
       <a href="video.html">Videos</a>
+      <a href="misc.html">Miscellaneous</a>
     </div>
   </div> 
    <a href="contact.html">Contact</a>
@@ -34,13 +35,14 @@
           <iframe src="css/images/MVI_7632.mp4"></iframe>
           <h2>Peephole</h2>
           <p class="description">
-            Surveillance is everywhere in our lives. Data is constantly being collected off of us without a second thought. In my video I force the audience to switch from being the ones watched to those who are watching. This video follows someone through part of their day, jumping from one surveillance camera to the next, with the footage gradually getting more invasive. For my video installation piece, I would project the video in a closed off, dark room. However, the audience would not have access to this room. The only way to view my work would be to look through a small peep hole in the neighboring room’s wall. This would force viewers to “spy” on those in the video, creating a level of discomfort.</p>
+            Surveillance is everywhere in our lives. Data is constantly being collected off of us without a second thought. In my video I force the audience to switch from being the ones watched to being the ones who are watching. This video follows someone through part of their day, jumping from one surveillance camera to the next, with the footage gradually getting more invasive. As an installation, I would project the video in a closed off, dark room. However, the audience would not have access to this room. The only way to view my work would be to look through a small peep hole in the neighboring room’s wall. This would force viewers to “spy” on those in the video, creating a level of discomfort.</p>
         </div>
         <div class="video">
-          <iframe src="css/images/RendonTalea_3_VideoArtProject.mp4"></iframe>
+          <iframe src="https://www.youtube.com/embed/DOayAnk5lr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <h2>S2 Ep36</h2>
           <p class="description">
-            Youtube makeup tutorial parody.</p>
+            Since the 1950s, artists have used video and digital media as tools to convey an idea or message to the greater public. However, creating videos is easier than it has ever been before. Video is now used by everyone for practically everything.  S2 Ep36 is a parody of youtube makeup tutorials which have become increasingly popular. This video comments on the lack of skill required to create a video watched by millions of people. It also touches upon how media has become saturated in advertisements driving our consumerist based culture.
+          </p>
         </div>
         <div class="video">
           <iframe src="css/images/shadow1.mp4"></iframe>
