--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <a href="photo.html">Photography</a>
       <a href="process.html">Processing</a>
       <a href="video.html">Videos</a>
+      <a href="misc.html">Miscellaneous</a>
     </div>
   </div> 
    <a href="contact.html">Contact</a>
@@ -35,15 +36,15 @@
     <div class="carousel-inner">
         <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
         <div class="carousel-item">
-            <img src="css/images/jellypic.jpg">
+            <img src="css/images/jack.gif" alt="boy">
         </div>
         <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <img src="css/images/rectangle.jpg">
+            <img src="css/images/rectangle.jpg" alt="rectangle">
         </div>
         <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <img src="css/images/shadow_2.png">
+            <img src="css/images/jellypic.jpg" alt="jellyfish">
         </div>
         <label for="carousel-3" class="carousel-control prev control-1">‹</label>
         <label for="carousel-2" class="carousel-control next control-1">›</label>
