--- a/photo.html
+++ b/photo.html
@@ -20,6 +20,7 @@
       <a href="photo.html">Photography</a>
       <a href="process.html">Processing</a>
       <a href="video.html">Videos</a>
+      <a href="misc.html">Miscellaneous</a>
     </div>
   </div> 
    <a href="contact.html">Contact</a>
@@ -39,6 +40,10 @@
   	<img src="css/images/DSC_1291.jpg" alt="fern" class="card">
     <img src="css/images/DSC_1315.jpg" alt="deer" class="card">
     <img src="css/images/DSC_1238.jpg" alt="hills" class="card">
+    <img src="css/images/DSC_1034.jpg" alt="jack" class="card">
+    <img src="css/images/glitch1.jpg" alt="glitch1" class="card">
+    <img src="css/images/glitch3.jpg" alt="glitch3" class="card">
+    <img src="css/images/glitch2.jpg" alt="glitch2" class="card">
 
   	
   </div>
