--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,9 @@
 </div>
 
 <div class="main">
+  <div class="float-center">
 <h1>Contact</h1>
-
+</div>
     <!-- Contact Form -->
 <div class="contact">
 <form action="">
@@ -48,7 +49,7 @@
 <h4><span style="font weight:bold">Extra Contact Info</span></h4>
     <hr style="width:200px" class="w3-opacity">
 
-    <div>
+    <div class="float-left">
       <p>San Jose, CA</p>
       <p>Email: talea828@gmail.com</p>
       <p>(818)-497-6381</p>
