--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
-	<link rel="stylesheet" type="text/css" href="css/custom.css" />
+  <title>Talea Rendon</title>
+
+  <link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
+  <link rel="stylesheet" type="text/css" href="css/custom.css" />
   <link rel="stylesheet" type="text/css" href="css/carousel.css">
 
 </head>
 <body>
-
-		<!-- Nav bar -->
+  <!-- Nav bar -->
 <div class="navbar">
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <div class="dropdown">
-    <a href="portfolio.html"><button class="dropbtn">Portfolio </a>
+    <button class="dropbtn">Portfolio 
       <i class="fa fa-caret-down"></i>
     </button>
 
@@ -28,24 +28,23 @@
    <a href="contact.html">Contact</a>
 </div>
 
-   <div class="main">
-   <h1>Portfolio</h1>
-   </div>
-
-
+  <div class="main">
+  <img src="css/images/name.svg">
+  </div>
+  
 <div class="carousel">
     <div class="carousel-inner">
         <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
         <div class="carousel-item">
-            <img src="css/images/jellypic.jpg">
+            <img src="css/images/jack.gif" alt="boy">
         </div>
         <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <img src="css/images/rectangle.jpg">
+            <img src="css/images/rectangle.jpg" alt="rectangle">
         </div>
         <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <img src="css/images/shadow_2.png">
+            <img src="css/images/jellypic.jpg" alt="jellyfish">
         </div>
         <label for="carousel-3" class="carousel-control prev control-1">‹</label>
         <label for="carousel-2" class="carousel-control next control-1">›</label>
@@ -67,7 +66,5 @@
     </div>
 </div>
 
-</div>
-</ul>
 </body>
 </html>
