--- a/index.html
+++ b/index.html
@@ -4,31 +4,22 @@
 	<title>Talea Rendon</title>
 
 	<link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
-	<link rel="stylesheet" type="text/css" href="css/custom.css" />
+	<link rel="stylesheet" type="text/css" href="css/index.css" />
   <link rel="stylesheet" type="text/css" href="css/carousel.css">
 
 </head>
 <body>
 	<!-- Nav bar -->
-<div class="navbar">
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
-  <div class="dropdown">
-    <button class="dropbtn">Portfolio 
-      <i class="fa fa-caret-down"></i>
-    </button>
+  <a href="photo.html">Photography</a>
+  <a href="process.html">Processing</a>
+  <a href="video.html">Videos</a>
+  <a href="misc.html">Miscellaneous</a>
+  <a href="contact.html">Contact</a>
 
-    <div class="dropdown-content">
-      <a href="photo.html">Photography</a>
-      <a href="process.html">Processing</a>
-      <a href="video.html">Videos</a>
-      <a href="misc.html">Miscellaneous</a>
-    </div>
-  </div> 
-   <a href="contact.html">Contact</a>
-</div>
 
-  <div class="main">
+  <div class="name">
   <img src="css/images/name.svg">
   </div>
   
