--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Talea Rendon</title>
+  <title>Talea Rendon</title>
 
-	<link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
-	<link rel="stylesheet" type="text/css" href="css/index.css" />
+  <link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
   <link rel="stylesheet" type="text/css" href="css/carousel.css">
+  <script source="j5/index.js"></script>
 
 </head>
 <body>
-	<!-- Nav bar -->
-  <a href="index.html">Home</a>
+  <!-- Nav bar -->
+ <!--  <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="photo.html">Photography</a>
   <a href="process.html">Processing</a>
@@ -18,9 +19,19 @@
   <a href="misc.html">Miscellaneous</a>
   <a href="contact.html">Contact</a>
 
-
+ -->
   <div class="name">
   <img src="css/images/name.svg">
+  </div>
+
+  <div class="nav">
+   <a href="about.html"></a>
+   <a href="photo.html"><img src="css/images/camera.png" alt="camera"></a>
+   <a href="video.html"><img src="css/images/film.png" alt="film"></a>
+   <a href="process.html"></a>
+   <a href="misc.html"></a>
+   <a href="contact.html"></a>
+
   </div>
   
 <div class="carousel">
