--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!-- Nav bar -->
- <!--  <a href="index.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="photo.html">Photography</a>
   <a href="process.html">Processing</a>
@@ -19,17 +19,17 @@
   <a href="misc.html">Miscellaneous</a>
   <a href="contact.html">Contact</a>
 
- -->
+
   <div class="name">
   <img src="css/images/name.svg">
   </div>
 
   <div class="nav">
-   <a href="about.html"></a>
+   <a href="about.html"><img src="css'images/Info.ico" alt="info"></a>
    <a href="photo.html"><img src="css/images/camera.png" alt="camera"></a>
    <a href="video.html"><img src="css/images/film.png" alt="film"></a>
-   <a href="process.html"></a>
-   <a href="misc.html"></a>
+   <a href="process.html"><img src="css/images/-oslcYof.png" alt="p5"></a>
+   <a href="misc.html"><img src=""></a>
    <a href="contact.html"></a>
 
   </div>
