--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
    <a href="photo.html"><img src="css/images/camera.png" alt="camera"></a>
    <a href="video.html"><img src="css/images/film.png" alt="film"></a>
    <a href="process.html"><img src="css/images/-oslcYof.png" alt="p5"></a>
-   <a href="misc.html"><img src=""></a>
-   <a href="contact.html"></a>
+   <a href="misc.html"><img src="" alt="misc"></a>
+   <a href="contact.html"><img src="" alt="mail"></a>
 
   </div>
   
