--- a/about.html
+++ b/about.html
@@ -27,16 +27,17 @@
 </div>
 
    <div class="main">
-   <h1>About</h1>
+   <!-- <h1>About</h1> -->
    
    <div class="me">
     <img src="css/images/DSC_0234.jpg">
     </div>
+    <div class="about">
    <p>I use a wide variety of mediums in order to explore the infinite possibilities of Digital Media. I use my work to look into and comment on the digital based world we live in today. My pieces tend to reflect the media saturated world we inhabit, the constant flow of information and advertisements being fed to us at all times, and how this new age of technology forms a relationship with the natural world.
 The process behind my projects begins with an idea or theme which is then transformed into a page of thumbnails. These thumbnails are a variety of different mediums and takes on the idea. This becomes the base upon which I start to work, and the direction I am going with my piece will often change several times before completion. 
  With my work I am trying to create something that provokes thought and realization within myself and others.
 </p>
-
+</div>
 </div>
 
 </body>
