--- a/index.html
+++ b/index.html
@@ -10,21 +10,32 @@
 
 </head>
 <body>
+  
   <!-- Nav bar -->
+<div class="navbar">
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
-  <a href="photo.html">Photography</a>
-  <a href="process.html">Processing</a>
-  <a href="video.html">Videos</a>
-  <a href="misc.html">Miscellaneous</a>
-  <a href="contact.html">Contact</a>
+  <div class="dropdown">
+    <button class="dropbtn">Portfolio
+      <i class="fa fa-caret-down"></i>
+    </button>
+
+    <div class="dropdown-content">
+      <a href="photo.html">Photography</a>
+      <a href="process.html">Processing</a>
+      <a href="video.html">Videos</a>
+      <a href="misc.html">Miscellaneous</a>
+    </div>
+  </div> 
+   <a href="contact.html">Contact</a>
+</div>
 
 
   <div class="name">
   <img src="css/images/name.svg">
   </div>
 
-  <div class="nav">
+ <!--  <div class="nav">
    <a href="about.html"><img src="css'images/Info.ico" alt="info"></a>
    <a href="photo.html"><img src="css/images/camera.png" alt="camera"></a>
    <a href="video.html"><img src="css/images/film.png" alt="film"></a>
@@ -32,7 +43,7 @@
    <a href="misc.html"><img src="" alt="misc"></a>
    <a href="contact.html"><img src="" alt="mail"></a>
 
-  </div>
+  </div> -->
   
 <div class="carousel">
     <div class="carousel-inner">
