--- a/process.html
+++ b/process.html
@@ -30,7 +30,7 @@
 </div>
 
   <div class="main">
-  <h1>Processing</h1>
+  <!-- <h1>Processing</h1> -->
   
   <script src="process/sketch.js"></script>
 
