--- a/process.html
+++ b/process.html
@@ -23,7 +23,7 @@
       <a href="photo.html">Photography</a>
       <a href="process.html">Processing</a>
       <a href="video.html">Videos</a>
-      <a href="misc.html">Miscellaneous</a>
+    <!--   <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
    <a href="contact.html">Contact</a>
@@ -35,6 +35,8 @@
   <script src="process/sketch.js"></script>
 
   <iframe src="https://player.vimeo.com/video/270063995" width="640" height="425" frameborder="none" class="center" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+  <p><a href="j5/sketch.js">Click here</a> to see the code I used to create this processing sketch.</p>
 </div>
 
 </body>
