--- a/video.html
+++ b/video.html
@@ -20,7 +20,7 @@
       <a href="photo.html">Photography</a>
       <a href="process.html">Processing</a>
       <a href="video.html">Videos</a>
-      <a href="misc.html">Miscellaneous</a>
+   <!--    <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
    <a href="contact.html">Contact</a>
@@ -48,14 +48,14 @@
           <iframe src="css/images/shadow1.mp4"></iframe>
           <h2>Shadow1</h2>
           <p class="description">
-            A short clip that I animated for a projection mapping project. This was part of a bigger piece that was exhibited by SJSU's Cadre Halloween Showcase.</p>
+            This is a short clip that I animated in Adobe After Effects for a projection mapping project. This was part of a bigger piece that was exhibited by San Jose State University's Cadre Halloween Showcase.</p>
           
         </div>
         <div class="video">
           <iframe src="css/images/shadow2.mp4"></iframe>
           <h2>Shadow2</h2>
           <p class="description">
-            A short clip that I animated for a projection mapping project. This was part of a bigger piece that was exhibited by SJSU's Cadre Halloween Showcase.</p>
+           This is a short clip that I animated in Adobe After Effects for a projection mapping project. This was part of a bigger piece that was exhibited by San Jose State University's Cadre Halloween Showcase.</p>
           
         </div>
 
