--- a/confirm.html
+++ b/confirm.html
@@ -20,7 +20,7 @@
       <a href="photo.html">Photography</a>
       <a href="process.html">Processing</a>
       <a href="video.html">Videos</a>
-      <!-- <a href="misc.html">Miscellaneous</a> -->
+    <!--   <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
    <a href="contact.html">Contact</a>
@@ -31,20 +31,7 @@
 
   </div>
 
-   <div class="container">
-  <form action="action_page.php">
-
-    <label for="fname">Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name...">
-
-    <label for="lname">Email</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your email...">
-
-
-    <label for="subject">Message</label>
-    <textarea id="subject" name="subject" placeholder="Leave a message..." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
+  <h1>Thank you for your message!</h1>
 
   </form>
 </div>
