--- a/glitch.html
+++ b/glitch.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Talea Rendon</title>
-
-  <link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
+	<title></title>
+	 <link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
   <link rel="stylesheet" type="text/css" href="css/carousel.css">
   <script source="j5/index.js"></script>
@@ -11,12 +10,12 @@
 </head>
 <body>
 
-  <!-- Nav bar -->
+	<!-- Nav bar -->
 <div class="navbar">
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <div class="dropdown">
-    <button class="dropbtn">Portfolio
+    <button class="dropbtn">Portfolio 
       <i class="fa fa-caret-down"></i>
     </button>
 
@@ -24,37 +23,49 @@
       <a href="photo.html">Photography</a>
       <a href="process.html">Processing</a>
       <a href="video.html">Videos</a>
-      <!-- <a href="misc.html">Miscellaneous</a> -->
+  <!--     <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
    <a href="contact.html">Contact</a>
 </div>
 
 
-  <div class="name">
-  <img src="css/images/name.svg">
-  </div>
-
-<div class="carousel">
+   <div class="carousel">
     <div class="carousel-inner">
         <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
         <div class="carousel-item">
-            <img src="css/images/jack.gif" alt="boy">
+            <img src="css/images/DSC_1034.jpg" alt="jack">
         </div>
+
         <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <img src="css/images/rectangle.jpg" alt="rectangle">
+            <img src="css/images/glitch1.jpg" alt="glitch1">
         </div>
+
         <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <img src="css/images/jellypic.jpg" alt="jellyfish">
+            <img src="css/images/glitch2.jpg" alt="glitch2">
         </div>
-        <label for="carousel-3" class="carousel-control prev control-1">‹</label>
+
+        <input class="carousel-open" type="radio" id="carousel-4" name="carousel" aria-hidden="true" hidden="">
+        <div class="carousel-item">
+            <img src="css/images/glitch3.jpg" alt="glitch3">
+        </div>
+
+        <input class="carousel-open" type="radio" id="carousel-5" name="carousel" aria-hidden="true" hidden="">
+        <div class="carousel-item">
+            <img src="css/images/jack.gif" alt="boy">
+        </div>
+        <label for="carousel-5" class="carousel-control prev control-1">‹</label>
         <label for="carousel-2" class="carousel-control next control-1">›</label>
         <label for="carousel-1" class="carousel-control prev control-2">‹</label>
         <label for="carousel-3" class="carousel-control next control-2">›</label>
         <label for="carousel-2" class="carousel-control prev control-3">‹</label>
-        <label for="carousel-1" class="carousel-control next control-3">›</label>
+        <label for="carousel-4" class="carousel-control next control-3">›</label>
+        <label for="carousel-3" class="carousel-control prev control-4">‹</label>
+        <label for="carousel-5" class="carousel-control next control-4">›</label>
+        <label for="carousel-4" class="carousel-control prev control-5">‹</label>
+        <label for="carousel-1" class="carousel-control next control-5">›</label>
         <ol class="carousel-indicators">
             <li>
                 <label for="carousel-1" class="carousel-bullet">•</label>
@@ -64,6 +75,12 @@
             </li>
             <li>
                 <label for="carousel-3" class="carousel-bullet">•</label>
+            </li>
+            <li>
+                <label for="carousel-4" class="carousel-bullet">•</label>
+            </li>
+            <li>
+                <label for="carousel-5" class="carousel-bullet">•</label>
             </li>
         </ol>
     </div>
