--- a/nature.html
+++ b/nature.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Talea Rendon</title>
+	<title></title>
 
-  <link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
+	  <link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
   <link rel="stylesheet" type="text/css" href="css/carousel.css">
   <script source="j5/index.js"></script>
@@ -11,12 +11,12 @@
 </head>
 <body>
 
-  <!-- Nav bar -->
+		<!-- Nav bar -->
 <div class="navbar">
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <div class="dropdown">
-    <button class="dropbtn">Portfolio
+    <button class="dropbtn">Portfolio 
       <i class="fa fa-caret-down"></i>
     </button>
 
@@ -24,22 +24,18 @@
       <a href="photo.html">Photography</a>
       <a href="process.html">Processing</a>
       <a href="video.html">Videos</a>
-      <!-- <a href="misc.html">Miscellaneous</a> -->
+     <!--  <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
    <a href="contact.html">Contact</a>
 </div>
 
 
-  <div class="name">
-  <img src="css/images/name.svg">
-  </div>
-
-<div class="carousel">
+   <div class="carousel">
     <div class="carousel-inner">
         <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
         <div class="carousel-item">
-            <img src="css/images/jack.gif" alt="boy">
+            <img src="css/images/gear.jpg" alt="gear">
         </div>
         <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
