--- a/photo.html
+++ b/photo.html
@@ -20,7 +20,7 @@
       <a href="photo.html">Photography</a>
       <a href="process.html">Processing</a>
       <a href="video.html">Videos</a>
-      <a href="misc.html">Miscellaneous</a>
+     <!--  <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
    <a href="contact.html">Contact</a>
@@ -31,19 +31,12 @@
   
 
   <div class="cards">
-  	<img src="css/images/car.jpg" alt="car" class="card">
-    <img src="css/images/gear.jpg" alt="gear" class="card">
-  	<img src="css/images/rectangle.jpg" alt="rectangles"class="card">
-  	<img src="css/images/DSC_0480.jpg" alt="flipped" class="card">
-  	<img src="css/images/DSC_0564.jpg" alt="log" class="card">
-    <img src="css/images/DSC_0750.jpg" alt="phone" class="card">
+  	<a href="nature.html"> <img src="css/images/gear.jpg" alt="gear" class="card"></a>
+  	<a href="grey.html"><img src="css/images/DSC_0564.jpg" alt="log" class="card"></a>
+  	<a href="glitch.html"><img src="css/images/glitch3.jpg" alt="glitch3" class="card"></a>
   	<img src="css/images/DSC_1291.jpg" alt="fern" class="card">
     <img src="css/images/DSC_1315.jpg" alt="deer" class="card">
     <img src="css/images/DSC_1238.jpg" alt="hills" class="card">
-    <img src="css/images/DSC_1034.jpg" alt="jack" class="card">
-    <img src="css/images/glitch1.jpg" alt="glitch1" class="card">
-    <img src="css/images/glitch3.jpg" alt="glitch3" class="card">
-    <img src="css/images/glitch2.jpg" alt="glitch2" class="card">
 
   	
   </div>
