image file size

--- a/grey.html
+++ b/grey.html
@@ -29,7 +29,8 @@
    <a href="contact.html">Contact</a>
 </div>
 
-
+  
+  <div class="photo-group">
    <div class="carousel">
     <div class="carousel-inner">
         <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
@@ -62,6 +63,7 @@
             </li>
         </ol>
     </div>
+</div>
 </div>
 
 </body>
