--- a/photo.html
+++ b/photo.html
@@ -32,11 +32,8 @@
 
   <div class="cards">
   	<a href="nature.html"> <img src="css/images/gear.jpg" alt="gear" class="card"></a>
-  	<a href="grey.html"><img src="css/images/DSC_0564.jpg" alt="log" class="card"></a>
+  	<!-- <a href="grey.html"><img src="css/images/DSC_0564.jpg" alt="log" class="card"></a> -->
   	<a href="glitch.html"><img src="css/images/glitch3.jpg" alt="glitch3" class="card"></a>
-  	<img src="css/images/DSC_1291.jpg" alt="fern" class="card">
-    <img src="css/images/DSC_1315.jpg" alt="deer" class="card">
-    <img src="css/images/DSC_1238.jpg" alt="hills" class="card">
 
   	
   </div>
