--- a/process.html
+++ b/process.html
@@ -32,11 +32,12 @@
   <div class="main">
   <!-- <h1>Processing</h1> -->
   
-  <script src="process/sketch.js"></script>
+  <script src="j5/sketch.js"></script>
 
-  <iframe src="https://player.vimeo.com/video/270063995" width="640" height="425" frameborder="none" class="center" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+ <!--  <iframe src="https://player.vimeo.com/video/270063995" width="640" height="425" frameborder="none" class="center" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 
   <p><a href="j5/sketch.js">Click here</a> to see the code I used to create this processing sketch.</p>
+  
 </div>
 
 </body>
