--- a/grey.html
+++ b/grey.html
@@ -26,7 +26,7 @@
      <!--  <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
-   <a href="contact.html">Contact</a>
+   <!-- <a href="contact.html">Contact</a> -->
 </div>
 
   
