--- a/process.html
+++ b/process.html
@@ -26,7 +26,7 @@
     <!--   <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
-   <a href="contact.html">Contact</a>
+  <!--  <a href="contact.html">Contact</a> -->
 </div>
 
   <div class="main">
@@ -34,10 +34,10 @@
   
   <script src="j5/sketch.js"></script>
 
+  <p><a href="j5/sketch.js">Click here</a> to see the code I used to create this processing sketch.</p>
+
  <!--  <iframe src="https://player.vimeo.com/video/270063995" width="640" height="425" frameborder="none" class="center" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 
-  <p><a href="j5/sketch.js">Click here</a> to see the code I used to create this processing sketch.</p>
-  
 </div>
 
 </body>
