--- a/video.html
+++ b/video.html
@@ -23,7 +23,7 @@
    <!--    <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
-   <a href="contact.html">Contact</a>
+   <!-- <a href="contact.html">Contact</a> -->
 </div>
 
   <div class="main">
@@ -56,6 +56,14 @@
           <h2>Shadow2</h2>
           <p class="description">
            This is a short clip that I animated in Adobe After Effects for a projection mapping project. This was part of a bigger piece that was exhibited by San Jose State University's Cadre Halloween Showcase.</p>
+          
+        </div>
+
+                <div class="video">
+          <img src="css/images/jack.gif">
+          <h2>Glitched</h2>
+          <p class="description">
+           Even though <i>Glitched</i> is technically a GIF89a(image), I believe due to the movement of the piece, it fits in more so with my videos. I created this piece in Photoshop as a commentary on depression. In personal experiences with depression, I have noticed it often leaves me feeling disconnected from many aspects of the world. The glitch in this piece marks parallels to the loss of focus, disengagement, and overall broken feeling that accompanies my depression. I used the technological glitch to represent this mental glitch that I deal with.</p>
           
         </div>
 
