--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <!-- <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
-   <a href="contact.html">Contact</a>
+  <!--  <a href="contact.html">Contact</a> -->
 </div>
 
    <div class="main">
