--- a/glitch.html
+++ b/glitch.html
@@ -26,7 +26,7 @@
   <!--     <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
-   <a href="contact.html">Contact</a>
+   <!-- <a href="contact.html">Contact</a> -->
 </div>
 
 
@@ -52,20 +52,20 @@
             <img src="css/images/glitch3.jpg" alt="glitch3">
         </div>
 
-        <input class="carousel-open" type="radio" id="carousel-5" name="carousel" aria-hidden="true" hidden="">
+  <!--       <input class="carousel-open" type="radio" id="carousel-5" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
             <img src="css/images/jack.gif" alt="boy">
-        </div>
-        <label for="carousel-5" class="carousel-control prev control-1">‹</label>
+        </div> -->
+        <label for="carousel-4" class="carousel-control prev control-1">‹</label>
         <label for="carousel-2" class="carousel-control next control-1">›</label>
         <label for="carousel-1" class="carousel-control prev control-2">‹</label>
         <label for="carousel-3" class="carousel-control next control-2">›</label>
         <label for="carousel-2" class="carousel-control prev control-3">‹</label>
         <label for="carousel-4" class="carousel-control next control-3">›</label>
         <label for="carousel-3" class="carousel-control prev control-4">‹</label>
-        <label for="carousel-5" class="carousel-control next control-4">›</label>
-        <label for="carousel-4" class="carousel-control prev control-5">‹</label>
-        <label for="carousel-1" class="carousel-control next control-5">›</label>
+        <label for="carousel-1" class="carousel-control next control-4">›</label>
+<!--         <label for="carousel-4" class="carousel-control prev control-5">‹</label>
+        <label for="carousel-1" class="carousel-control next control-5">›</label> -->
         <ol class="carousel-indicators">
             <li>
                 <label for="carousel-1" class="carousel-bullet">•</label>
@@ -79,9 +79,9 @@
             <li>
                 <label for="carousel-4" class="carousel-bullet">•</label>
             </li>
-            <li>
+           <!--  <li>
                 <label for="carousel-5" class="carousel-bullet">•</label>
-            </li>
+            </li> -->
         </ol>
     </div>
 </div>
