--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
-   <a href="contact.html">Contact</a>
+  <!--  <a href="contact.html">Contact</a> -->
 </div>
 
 
