--- a/nature.html
+++ b/nature.html
@@ -27,7 +27,7 @@
      <!--  <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
-   <a href="contact.html">Contact</a>
+<!--    <a href="contact.html">Contact</a> -->
 </div>
 
 
@@ -41,16 +41,16 @@
         <div class="carousel-item">
             <img src="css/images/rectangle.jpg" alt="rectangle">
         </div>
-        <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
+       <!--  <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <img src="css/images/jellypic.jpg" alt="jellyfish">
-        </div>
-        <label for="carousel-3" class="carousel-control prev control-1">‹</label>
+            <img src="css/images/jellypic.jpg" alt="jellyfish"> -->
+        <!-- </div> -->
+       <!--  <label for="carousel-3" class="carousel-control prev control-1">‹</label> -->
         <label for="carousel-2" class="carousel-control next control-1">›</label>
+        <label for="carousel-2" class="carousel-control prev control-1">‹</label>
+       <!--  <label for="carousel-3" class="carousel-control next control-2">›</label> -->
         <label for="carousel-1" class="carousel-control prev control-2">‹</label>
-        <label for="carousel-3" class="carousel-control next control-2">›</label>
-        <label for="carousel-2" class="carousel-control prev control-3">‹</label>
-        <label for="carousel-1" class="carousel-control next control-3">›</label>
+        <label for="carousel-1" class="carousel-control next control-2">›</label>
         <ol class="carousel-indicators">
             <li>
                 <label for="carousel-1" class="carousel-bullet">•</label>
@@ -58,9 +58,9 @@
             <li>
                 <label for="carousel-2" class="carousel-bullet">•</label>
             </li>
-            <li>
+           <!--  <li>
                 <label for="carousel-3" class="carousel-bullet">•</label>
-            </li>
+            </li> -->
         </ol>
     </div>
 </div>
