--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       <!-- <a href="misc.html">Miscellaneous</a> -->
     </div>
   </div> 
-   <a href="contact.html">Contact</a>
+   <!-- <a href="contact.html">Contact</a> -->
 </div>
 
   <div class="main">
