--- a/art75/bh1.html
+++ b/art75/bh1.html
@@ -7,7 +7,7 @@
 <body>
 	<p>Wow! I'm surprised a singular human like you was able to finish that so fast. But I did tell you it would be easy if you just listened to me. The time has come to see who you are. All that is left is to agree to the following terms and conditions. Your identity is just a click away!</p>
 
-	<a href="reveal.html">Accept</a>
+	<a href="reveal.html" class="buttons">Accept</a>
 
 	<p>Society Led Life Terms and Conditions of Use
 Effective as of April 15, 2019 </p>
