--- a/art75/boy.html
+++ b/art75/boy.html
@@ -9,9 +9,9 @@
 
 	<p>What is your favorite color?</p>
 
-	<a href="blue.html">Blue</a>
+	<a href="blue.html" class="buttons">Blue</a>
 
-	<a href="green.html">Green</a> 
+	<a href="green.html" class="buttons">Green</a> 
 
 </body>
 </html>
