--- a/art75/girl.html
+++ b/art75/girl.html
@@ -7,9 +7,9 @@
 <body>
 	<p>You are a girl, good luck on this journey! Next you get to choose your favorite color. (Pink is probably your best bet.)</p>
 
-	<a href="pink.html">Pink</a>
+	<a href="pink.html" class="buttons">Pink</a>
 	
-	<a href="purple.html">Purple</a>
+	<a href="purple.html" class="buttons">Purple</a>
 
 
 </body>
