--- a/art75/identity.html
+++ b/art75/identity.html
@@ -7,9 +7,9 @@
 <body>
 	<p>What? No, you were supposed to be a boy or a girl. You should probably go back and choose another option, you will be happier. </p>
 
-	<a href="start.html">Back</a>
+	<a href="start.html" class="buttons">Back</a>
 
-	<a href="color.html">No</a>
+	<a href="color.html" class="buttons">No</a>
 
 </body>
 </html>
