--- a/art75/no1.html
+++ b/art75/no1.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body>
-	<p>What do you mean? You have to answer these questions. It's really not so bad. Here, I'll make it easier for you. Just click on the word "yes"</p>
+	<p>What? You have to answer these questions. It's really not so bad. Here, I'll make it easier for you. Just click on the word "yes"</p>
 
 	<p></p>
 
