--- a/art75/no2.html
+++ b/art75/no2.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="game.css">
+	<link rel="stylesheet" type="text/css" href="no.css">
+	<script type="text/javascript">start.js</script>
 </head>
 <body>
-	<p>Okay . Good luck without beeing able to see any directions.</p>
+	<div>
+	<p>Okay, do things your way. But, good luck without beeing able to see any directions.</p>
 
 	<p id="hidden">Directions: Enjoy life and keep moving forward. Click the button below to continue down this unknown path.</p>
-	<a href="no3.html">Move forward</a>
-
+	<a href="no3.html" id="find">Move forward</a>
+</div>
 </body>
 </html>
