--- a/art75/reveal.html
+++ b/art75/reveal.html
@@ -8,16 +8,17 @@
 
 	<h1>Welcome to A Societal Led Life</h1>
 	<p>From now on life will be easy. Just keep listening to society and you won't have to make any hard decisions for yourself. There is no need to know your identity, Society has taken care of this for you. Without individuality you will be happy.</p>
+	<p>For now, here is a starter pack of societal norms we expect from you. Study up and prepare for a never ending set of unhealthy expectations!</p>
 
-	<div class="images">
-	<img src="images/beer.jpeg">
-	<img src="images/gballoon.jpeg">
-	<img src="images/oldspice.jpeg">
-	<img src="images/aa.jpeg">
-	<img src="images/bballoon.jpeg">
-	<img src="images/tvst.jpeg">
-	<img src="images/tomford.jpeg">
-	<img src="images/milk.jpeg">
+	<div>
+	<img src="images/milk.jpeg" class="images">
+	<img src="images/beer.jpeg" class="images">
+	<img src="images/aa.jpeg" class="images">
+	<img src="images/bballoon.jpeg" class="images">
+	<img src="images/tvst.jpeg" class="images">
+	<img src="images/tomford.jpeg" class="images">
+	<img src="images/oldspice.jpeg" class="images">
+
 	</div>
 
 </body>
