--- a/art75/start.html
+++ b/art75/start.html
@@ -3,6 +3,9 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="game.css">
+	<script src="sound/libraries/p5.min.js"></script>
+    <script src="sound/libraries/p5.dom.min.js"></script>
+    <script src="sound/libraries/p5.sound.min.js"></script>
 	<script type="start.js"></script>
 </head>
 <body>
