--- a/art75/start.html
+++ b/art75/start.html
@@ -6,7 +6,7 @@
 	<script src="sound/libraries/p5.min.js"></script>
     <script src="sound/libraries/p5.dom.min.js"></script>
     <script src="sound/libraries/p5.sound.min.js"></script>
-	<script type="start.js"></script>
+	<script src="start.js"></script>
 </head>
 <body>
 	<h1>Welcome to life</h1>
