music on all pages

--- a/art75/bh1.html
+++ b/art75/bh1.html
@@ -3,6 +3,10 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="game.css">
+	<script src="sound/libraries/p5.min.js"></script>
+    <script src="sound/libraries/p5.dom.min.js"></script>
+    <script src="sound/libraries/p5.sound.min.js"></script>
+	<script src="start.js"></script>
 </head>
 <body>
 	<p>Wow! I'm surprised a singular human like you was able to finish that so fast. But I did tell you it would be easy if you just listened to me. The time has come to see who you are. All that is left is to agree to the following terms and conditions. Your identity is just a click away!</p>
