--- a/art75/no1.html
+++ b/art75/no1.html
@@ -3,6 +3,10 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="game.css">
+	<script src="sound/libraries/p5.min.js"></script>
+    <script src="sound/libraries/p5.dom.min.js"></script>
+    <script src="sound/libraries/p5.sound.min.js"></script>
+	<script src="start.js"></script>
 </head>
 <body>
 	<p>What? You have to answer these questions. It's really not so bad. Here, I'll make it easier for you. Just click on the word "yes"</p>
