--- a/art75/girl.html
+++ b/art75/girl.html
@@ -3,6 +3,10 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="game.css">
+	<script src="sound/libraries/p5.min.js"></script>
+    <script src="sound/libraries/p5.dom.min.js"></script>
+    <script src="sound/libraries/p5.sound.min.js"></script>
+	<script src="start.js"></script>
 </head>
 <body>
 	<p>You are a girl, good luck on this journey! Next you get to choose your favorite color. (Pink is probably your best bet.)</p>
