--- a/art75/identity.html
+++ b/art75/identity.html
@@ -3,6 +3,10 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="game.css">
+	<script src="sound/libraries/p5.min.js"></script>
+    <script src="sound/libraries/p5.dom.min.js"></script>
+    <script src="sound/libraries/p5.sound.min.js"></script>
+	<script src="start.js"></script>
 </head>
 <body>
 	<p>What? No, you were supposed to be a boy or a girl. You should probably go back and choose another option, you will be happier. </p>
