--- a/art75/no3.html
+++ b/art75/no3.html
@@ -3,7 +3,10 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="end.css">
-	<script type="text/javascript">start.js</script>
+	<script src="sound/libraries/p5.min.js"></script>
+    <script src="sound/libraries/p5.dom.min.js"></script>
+    <script src="sound/libraries/p5.sound.min.js"></script>
+	<script src="start.js"></script>
 </head>
 <body>
 
