--- a/art75/pink.html
+++ b/art75/pink.html
@@ -3,6 +3,10 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="game.css">
+	<script src="sound/libraries/p5.min.js"></script>
+    <script src="sound/libraries/p5.dom.min.js"></script>
+    <script src="sound/libraries/p5.sound.min.js"></script>
+	<script src="start.js"></script>
 </head>
 <body>
 	<p>Pink is definitely the best choice for you.</p>
