--- a/ws3.html
+++ b/ws3.html
@@ -5,8 +5,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
-	<link rel="stylesheet" type="text/css" href="css/custom.css" />
+	<!-- <link rel="stylesheet" type="text/css" href="foundation-6/css/foundation.css" />
+	<link rel="stylesheet" type="text/css" href="css/custom.css" /> -->
 </head>
 <body>
 	<p>Click <a href="http://paperjs.org/examples/spiral-raster/">here</a> to see the original sketch.</p>
