--- a/process.html
+++ b/process.html
@@ -35,7 +35,7 @@
   <script src="j5/sketch.js"></script>
 
   <p><a href="j5/sketch.js">Click here</a> to see the code I used to create this processing sketch.</p>
-  <a href="ws3.html" id="hidden">hidden sketch</a>
+  <a href="Rendon_paperjs_mod.html" id="hidden">hidden sketch</a>
 
  <!--  <iframe src="https://player.vimeo.com/video/270063995" width="640" height="425" frameborder="none" class="center" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 
