--- a/Rendon_paperjs_mod.html
+++ b/Rendon_paperjs_mod.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/custom.css" /> -->
 </head>
 <body>
-	<p>Click <a href="http://paperjs.org/examples/spiral-raster/">here</a> to see the original sketch.</p>
+	<p>Click <a href="http://paperjs.org/examples/chain/">here</a> to see the original sketch.</p>
 
 	<script src="j5/ws3.js"></script>
 
