--- a/p5js/p5.html
+++ b/p5js/p5.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="">
-
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>play button</title>
-  <script src="../libraries/p5.min.js"></script>
-  <script src="../libraries/p5.dom.min.js"></script>
-  <script src="../libraries/p5.sound.min.js"></script>
-  <script src="p5.js"></script>
-  <link rel="stylesheet" href="main.css">
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="p5.css">
+	<script src="sound/libraries/p5.min.js"></script>
+    <script src="sound/libraries/p5.dom.min.js"></script>
+    <script src="sound/libraries/p5.sound.min.js"></script>
+	<script src="p5.js"></script>
 </head>
-
 <body>
-  
-</body>
+	<h1>Just Breathe</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque expedita qui, sit ab sequi fugiat, facere voluptatibus odit. Consequatur maxime, ratione obcaecati debitis numquam facere dicta explicabo temporibus neque iste.</p>
 
+
+
+	
+
+</body>
 </html>
